# bluetooth_longrange_smarthome

./: .clang-format  README.md  west.yml
apps/central/: CMakeLists.txt  prj.conf
apps/central/boards/: nrf52840dk_nrf52840.conf  nrf52840dongle_nrf52840.conf
apps/central/src/: bluetooth.c  bluetooth_internal.c  main.c  main.h  mqtt.c
apps/co2sensor/: CMakeLists.txt  prj.conf
apps/co2sensor/boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/co2sensor/src/: bluetooth.c  bt_service_co2.c  main.c  main.h
apps/dehumidifier/: CMakeLists.txt  prj.conf
apps/dehumidifier/boards/: nrf52840_mdk.conf  nrf52840_mdk.overlay
apps/dehumidifier/src/: bt_service_dehumid.c  main.c  main.h
dts/bindings/dehumidifier/: dehumidifier.yaml
